Fixed small bugs Fixed alignment problem

--- a/FIT5120_Project_Refugees/Content/Site.css
+++ b/FIT5120_Project_Refugees/Content/Site.css
@@ -236,9 +236,14 @@ textarea {
         display: block;
     }
 
-    .topnavbar a {
-        display:none;
+    .topnavbar  a#projectLogo{
+        display:block;
     }
+
+    .topnavbar a {
+        display: none;
+    }
+
 
     .card {
         width:35vw;
